--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Peeps is a home to a growing ecosystem of decentralized technologies, applications, systems, and devices that are changing the way landscape of how we do everything.">
     <meta name="keywords" content="none.">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    <link rel="shortcut icon" href="assets/img/logo/peepfab.png">
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
@@ -110,7 +110,7 @@
                     <img src="assets/img/logo/dwallet.png" alt="dwallet">
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">dWalle</span>
+                    <span class="h6 d-block mb-0">dWallet</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -176,7 +176,7 @@
               </a>
               <a href="https://docs.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>DD</span>
                   </div>
                   <div>
@@ -187,11 +187,11 @@
               </a>
               <a href="https://explorer.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>EN</span>
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">Explore Network Data </span>
+                    <span class="h6 d-block mb-0">Explore Network</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -226,9 +226,9 @@
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-5 mb-3 mb-sm-0">
             <h1 class="display-4">decentralize everything.</h1>
-            <p class="description">We're fighting for your right to free speech, privacy and freedom online through the launch of the decentralized web and many new apps like dSocial, dSearch and more. Join our crusade to decentralize everything and take on the big tech cartel."</p>
-            <a href="https://signup.dsocial.network/" class="btn btn-lg btn-support">Join dSocial</a>
-            <a href="#block-2" class="btn btn-lg btn-black">Learn More</a>
+            <p class="description">We're fighting for your right to free speech, privacy and freedom online through the launch of the decentralized web and many new apps like dSocial, dSearch and more. Join our crusade to decentralize everything and take on the big tech cartel.</p>
+            <a href="https://signup.dsocial.network/" class="btn btn-lg btn-black" style="color:#fff">Join dSocial</a>
+            <a href="#block-2" class="btn btn-lg btn-success">Learn More</a>
           </div>
           <div class="col-lg-7">
             <img src="assets/img/group-isolated-1.jpg" alt="Image" class="pt-md-5 pt-lg-0">
@@ -238,7 +238,7 @@
     </section>
   </div>
   <a href="https://play.google.com/store/apps/details?id=com.dwallet.android.arisen.wallet">
-    <div class="ppl-bar">
+    <div class="ppl-bar bg-gradient">
       <p>dWallet is now available on most Android devices via the Google Play store.</p>
     </div>
   </a>
@@ -254,7 +254,7 @@
               <img src="assets/img/logo/dweb-logo.png" alt="dweb">
             </div>
             <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">The People's Web</h1>
-              <p class="description">The decentralzied web is an all-new web where end-users are in control of their own data, the community polices the websites, apps and content distributed on top of it, hackers are rendered useless and where users and developers of the Internet can finally have their freedom back - by design.</p>
+              <p class="description">The decentralized web is an all-new web where end-users are in control of their own data, the community polices the websites, apps and content distributed on top of it, hackers are rendered useless and where users and developers of the Internet can finally have their freedom back - by design.</p>
               <a href="https://dwebx.org" class="btn btn-lg btn-black" style="color:#fff">Learn More About dWeb</a>
               <a href="#dbrowser"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               
@@ -275,7 +275,7 @@
               <img src="assets/img/logo/dbrowser.png" alt="dbrowser">
             </div>
             <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">Experience The Open Web.</h1>
-              <p class="description">dBrowser allows users and developers to browse the dWeb and develop decentralized websites and applications as well. dBrowser is available for MacOS, Windows and Linux, where you can experience the decentralized and open web for yourself.</p>
+              <p class="description">dBrowser allows users to browse the dWeb and develop decentralized websites and applications as well. dBrowser is available for MacOS, Windows and Linux, where you can experience the decentralized and open web for yourself.</p>
               <a href="dbrowser.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About dBrowser</a>
               <a href="#peepsid"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
             </div>
@@ -296,7 +296,7 @@
               <img src="assets/img/logo/peepsLogo.png" alt="peeps">
             </div>
             <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">One Identity. A World Of Possibilities.</h1>
-              <p class="description">The dWeb and its apps use a universal and decentralized authentication system. One account allows you to use any dWeb-powered apps, it is cryptographically secure and impossible to hack.</p>
+              <p class="description">The dWeb and its apps use a universal and decentralized authentication system. One account allows you to use any dWeb-powered app, it is cryptographically secure and impossible to hack.</p>
               <a href="peepsid.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About PeepsID</a>
               <a href="#dwallet"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
             </div>
@@ -352,7 +352,7 @@
     <div class="row align-items-center justify-content-around">
       <div class="col-lg-5 col-md-6">
         <span class="h2 d-block">Help us bring freedom back to the web.</span>
-        <p class="lead mb-4">Learn how you can help support our continued development of the dWeb and the many apps we're developing to enable our team to bring freedom back to the web.</p>
+        <p class="lead mb-4">We need your help in funding our continued development of the dWeb and powerful projects like dWallet and dSocial, so that we can ultimately bring freedom back to the web, together.</p>
         <div class="list-group">
           <a href="join.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
@@ -393,7 +393,7 @@
             <img src="assets/img/logo/peepsLogo.png" alt="peeps-logo" class="footer-logo">
             <p class="trademark">decentralize everything. &trade;</p>
             <hr/>
-            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/>- Jared Rice Sr.<br/>CEO, Peeps</p>
+            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/><b>- Jared Rice Sr.</b><br/>CEO, Peeps</p>
             <hr/>
             <p class="powered-by">
               Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png" alt="peeps-logo"></a> and Made in <img src="assets/img/flag-us.svg" alt="United States" class="btn-image">
