--- a/dbrowser.html
+++ b/dbrowser.html
@@ -8,7 +8,7 @@
     <meta name="description" content="dBrowser is a web browser for Linux, MacOS and Windows that allows users to browser and develop upon the decentralized web (dweb://).">
     <meta name="keywords" content="dbrowser, dweb browser, decentralized web browser, dweb web browser">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    <link rel="shortcut icon" href="assets/img/logo/peepfab.png">
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
@@ -110,7 +110,7 @@
                     <img src="assets/img/logo/dwallet.png" alt="dwallet">
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">dWalle</span>
+                    <span class="h6 d-block mb-0">dWallet</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -176,7 +176,7 @@
               </a>
               <a href="https://docs.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>DD</span>
                   </div>
                   <div>
@@ -187,11 +187,11 @@
               </a>
               <a href="https://explorer.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>EN</span>
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">Explore Network Data </span>
+                    <span class="h6 d-block mb-0">Explore Network</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -218,8 +218,8 @@
 
 <!--------------------------------- Header Block End --------------------------->
 <!------------------------- CTA Block Start------------------------>
-<section class="height-100 bg-opaque">
-    <img src="assets/img/norway.jpg" alt="Norway's Geirangerfjord" class="bg-image">
+<section class="height-100 bg-gradient">
+    <img src="assets/img/norway.jpg" alt="Norway's Geirangerfjord" class="bg-image opacity-30">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
@@ -235,7 +235,7 @@
         </div>
       </div>
     </div>
-    <p class="replace">Photograph of: Norway's Geirangerfjord</p>
+    <p class="replace label">Photograph of: Norway's Geirangerfjord</p>
   </section>
 
 <!------------------------- CTA Block End------------------------>
@@ -262,7 +262,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">and the regular web too.</h1>
-                <p class="description">dBrowser also allows users to browse the centralized web as well, so that they can access the best of the both worlds. All from a single address bar.</p>
+                <p class="description">dBrowser also allows users to browse the centralized web as well, so that they can access the best of both worlds, all from a single address bar.</p>
                 <a href="#build-on-the-dweb"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
@@ -278,7 +278,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">develop on the dweb.</h1>
-                <p class="description">dBrowser is packed full with developer tools that allow developers to easily develop and launch projects on the dWeb, from a built-in web editor, a distributed software repository and even pre-designed web templates.</p>
+                <p class="description">dBrowser is packed full with developer tools that allow developers to easily develop and launch projects on the dWeb, including a built-in web editor, a distributed software repository and even pre-designed web templates.</p>
                 <a href="#true-privacy"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
@@ -308,7 +308,7 @@
     <div class="row align-items-center justify-content-around">
       <div class="col-lg-5 col-md-6">
         <span class="h2 d-block">Help us bring freedom back to the web.</span>
-        <p class="lead mb-4">Learn how you can help support our continued development of the dWeb and the many apps we're developing to enable our team to bring freedom back to the web.</p>
+        <p class="lead mb-4">We need your help in funding our continued development of the dWeb and powerful projects like dWallet and dSocial, so that we can ultimately bring freedom back to the web, together.</p>
         <div class="list-group">
           <a href="join.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
@@ -349,7 +349,7 @@
             <img src="assets/img/logo/peepsLogo.png" alt="peeps-logo" class="footer-logo">
             <p class="trademark">decentralize everything. &trade;</p>
             <hr/>
-            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/>- Jared Rice Sr.<br/>CEO, Peeps</p>
+            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/><b>- Jared Rice Sr.</b><br/>CEO, Peeps</p>
             <hr/>
             <p class="powered-by">
               Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png" alt="peeps-logo"></a> and Made in <img src="assets/img/flag-us.svg" alt="United States" class="btn-image">
