--- a/dnames.html
+++ b/dnames.html
@@ -8,7 +8,7 @@
     <meta name="description" content="dNames is the dWeb's first domain registrar for decentralized top-level domains (dTLDs) like .dcom, .dnet, .dorg, .dweb and more.">
     <meta name="keywords" content="dtlds, dtld registrar, decentralized domain names, decentralized domains">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    <link rel="shortcut icon" href="assets/img/logo/peepfab.png">
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
@@ -110,7 +110,7 @@
                     <img src="assets/img/logo/dwallet.png" alt="dwallet">
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">dWalle</span>
+                    <span class="h6 d-block mb-0">dWallet</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -176,7 +176,7 @@
               </a>
               <a href="https://docs.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>DD</span>
                   </div>
                   <div>
@@ -187,11 +187,11 @@
               </a>
               <a href="https://explorer.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>EN</span>
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">Explore Network Data </span>
+                    <span class="h6 d-block mb-0">Explore Network</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -218,8 +218,8 @@
 
 <!--------------------------------- Header Block End --------------------------->
 <!-------------------------dNames CTA Block Start------------------------>
-<section class="height-100 bg-opaque">
-    <img src="assets/img/Photograph Of Pfeiffer Beach.jpg" alt="Pfeiffer Beach" class="bg-image">
+<section class="height-100 bg-gradient">
+    <img src="assets/img/Photograph Of Pfeiffer Beach.jpg" alt="Pfeiffer Beach" class="bg-image opacity-30">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
@@ -227,7 +227,7 @@
                 <div class="logo-rounded ">
                     <img src="assets/img/logo/dnames.png" alt="dname">
                 </div>
-                <h1 class="display-4 text-white font-alt-1 text-center mt-2">Decentralized Domain Names.</h1>
+                <h1 class="display-4 text-white font-alt-1 text-center mt-2">Decentralized Domains.</h1>
                 <p class="description" style="color:#fff;">dNames is the dWeb's first domain registrar for decentralized top-level domains (dTLDs) like .dcom, .dnet, .dorg, .dweb and more. dNames launches August 31st, 2020.</p>
                 <div class="text-center">
                     <a href="#search" class="btn btn-lg btn-white">Search For Your Domain </a>
@@ -237,7 +237,7 @@
         </div>
       </div>
     </div>
-    <p class="replace">Photograph Of Pfeiffer Beach</p>
+    <p class="replace label">Photograph Of Pfeiffer Beach</p>
   </section>
 
 <!------------------------- CTA Block End------------------------>
@@ -248,9 +248,9 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">search for your next domain name.</h1>
-                <div class="message-box" style="color: green;">
+                <!-- <div class="message-box" style="color: green;">
                     <p>The dTLD is available! or not message box</p>
-                </div>
+                </div> -->
                 <form class="d-sm-flex align-items-center">
                     <div class="input-group input-group-lg mr-2">
                         <input type="text" class="form-control" placeholder="any 12 characters" aria-label="Search">
@@ -270,7 +270,7 @@
                 </form>
                 <div class="text-center">
                     <a href="#" class="btn btn-lg btn-white">See If It's Available</a>
-                    <p style="font-size: 10px;">NOTE: This is just to test the domain search API. Domains cannot be purchased until the launch of the dNames platform."</p>
+                    <p style="font-size: 10px;">NOTE: This is just to test the domain search API. Domains cannot be purchased until the launch of the dNames platform.</p>
                 </div>
                 <a href="#your-domain-forever"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
@@ -334,7 +334,7 @@
     <div class="row align-items-center justify-content-around">
       <div class="col-lg-5 col-md-6">
         <span class="h2 d-block">Help us bring freedom back to the web.</span>
-        <p class="lead mb-4">Learn how you can help support our continued development of the dWeb and the many apps we're developing to enable our team to bring freedom back to the web.</p>
+        <p class="lead mb-4">We need your help in funding our continued development of the dWeb and powerful projects like dWallet and dSocial, so that we can ultimately bring freedom back to the web, together.</p>
         <div class="list-group">
           <a href="join.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
@@ -375,7 +375,7 @@
             <img src="assets/img/logo/peepsLogo.png" alt="peeps-logo" class="footer-logo">
             <p class="trademark">decentralize everything. &trade;</p>
             <hr/>
-            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/>- Jared Rice Sr.<br/>CEO, Peeps</p>
+            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/><b>- Jared Rice Sr.</b><br/>CEO, Peeps</p>
             <hr/>
             <p class="powered-by">
               Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png" alt="peeps-logo"></a> and Made in <img src="assets/img/flag-us.svg" alt="United States" class="btn-image">
