--- a/dsearch.html
+++ b/dsearch.html
@@ -8,7 +8,7 @@
     <meta name="description" content="dSearch is the decentralized web's first search engine and the best way to explore the ins and outs of the dWeb.">
     <meta name="keywords" content="dweb search engine, search dweb, search dapps, search dsites">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    <link rel="shortcut icon" href="assets/img/logo/peepfab.png">
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
@@ -110,7 +110,7 @@
                     <img src="assets/img/logo/dwallet.png" alt="dwallet">
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">dWalle</span>
+                    <span class="h6 d-block mb-0">dWallet</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -176,7 +176,7 @@
               </a>
               <a href="https://docs.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>DD</span>
                   </div>
                   <div>
@@ -187,11 +187,11 @@
               </a>
               <a href="https://explorer.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>EN</span>
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">Explore Network Data </span>
+                    <span class="h6 d-block mb-0">Explore Network</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -218,8 +218,8 @@
 
 <!--------------------------------- Header Block End --------------------------->
 <!-------------------------dSearch CTA Block Start------------------------>
-<section class="height-100 bg-opaque">
-    <img src="assets/img/Hawaii's Lulumahu Falls.jpg" alt="Hawaii's Lulumahu Falls" class="bg-image">
+<section class="height-100 bg-gradient">
+    <img src="assets/img/Hawaii's Lulumahu Falls.jpg" alt="Hawaii's Lulumahu Falls" class="bg-image opacity-30">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
@@ -236,7 +236,7 @@
         </div>
       </div>
     </div>
-    <p class="replace">Photograph of Hawaii's Lulumalu Falls</p>
+    <p class="replace label">Photograph of Hawaii's Lulumalu Falls</p>
   </section>
 
 <!------------------------- CTA Block End------------------------>
@@ -247,7 +247,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">search the dweb.</h1>
-                <p class="description">dSearch allows users to search dSites and dApps on the dWeb, as well as images, posts on dSocial, news on dSocial, videos on dVideo and more - safely and privately.</p>
+                <p class="description">dSearch allows users to search dSites and dApps on the dWeb, as well as images, posts on dSocial, news on dNews, videos on dVideo and more - safely and privately.</p>
                 <a href="#search-with-privacy"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
@@ -279,7 +279,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">a new kind of search engine.</h1>
-                <p class="description">dSearch uses a game-changing technology stack that allow dSearch to perform greater than search engines like Google, without a single data center or even a server. dSearch instead operates across the computers that use it, further increasing the privacy of its users.</p>
+                <p class="description">dSearch uses a game-changing technology stack that allows dSearch to perform greater than search engines like Google, without a single data center or even a server. dSearch instead operates across the computers that use it, further increasing the privacy of its users.</p>
                 <a href="#search-and-earn"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
@@ -295,7 +295,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">search and earn.</h1>
-                <p class="description">dSearch users can opt-in to view ads that are relevant to their searches via Peeps dAdvertising platform and can even earn a share of the platform's ad revenue.</p>
+                <p class="description">dSearch users can opt-in to view ads that are relevant to their searches via our dAdvertising platform and can even earn a share of the platform's ad revenue.</p>
                 
               </div>
         </div>
@@ -310,7 +310,7 @@
     <div class="row align-items-center justify-content-around">
       <div class="col-lg-5 col-md-6">
         <span class="h2 d-block">Help us bring freedom back to the web.</span>
-        <p class="lead mb-4">Learn how you can help support our continued development of the dWeb and the many apps we're developing to enable our team to bring freedom back to the web.</p>
+        <p class="lead mb-4">We need your help in funding our continued development of the dWeb and powerful projects like dWallet and dSocial, so that we can ultimately bring freedom back to the web, together.</p>
         <div class="list-group">
           <a href="join.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
@@ -351,7 +351,7 @@
             <img src="assets/img/logo/peepsLogo.png" alt="peeps-logo" class="footer-logo">
             <p class="trademark">decentralize everything. &trade;</p>
             <hr/>
-            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/>- Jared Rice Sr.<br/>CEO, Peeps</p>
+            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/><b>- Jared Rice Sr.</b><br/>CEO, Peeps</p>
             <hr/>
             <p class="powered-by">
               Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png" alt="peeps-logo"></a> and Made in <img src="assets/img/flag-us.svg" alt="United States" class="btn-image">
