--- a/dsocial.html
+++ b/dsocial.html
@@ -8,7 +8,7 @@
     <meta name="description" content="dSocial is the world's first truly decentralized and censorship-resistant social network where you earn for being you.">
     <meta name="keywords" content="dsocial, decentralized social network, censorship-resistant social network, social networking dapp, twitter alternative">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    <link rel="shortcut icon" href="assets/img/logo/peepfab.png">
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
@@ -110,7 +110,7 @@
                     <img src="assets/img/logo/dwallet.png" alt="dwallet">
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">dWalle</span>
+                    <span class="h6 d-block mb-0">dWallet</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -176,7 +176,7 @@
               </a>
               <a href="https://docs.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>DD</span>
                   </div>
                   <div>
@@ -187,11 +187,11 @@
               </a>
               <a href="https://explorer.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>EN</span>
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">Explore Network Data </span>
+                    <span class="h6 d-block mb-0">Explore Network</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -218,8 +218,8 @@
 
 <!--------------------------------- Header Block End --------------------------->
 <!-------------------------dSocial CTA Block Start------------------------>
-<section class="height-100 bg-opaque">
-    <img src="assets/img/Photograph Of Old Faithfu.jpg" alt="Old Faithful At Yellowstone" class="bg-image">
+<section class="height-100 bg-gradient">
+    <img src="assets/img/Photograph Of Old Faithfu.jpg" alt="Old Faithful At Yellowstone" class="bg-image opacity-30">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
@@ -228,14 +228,17 @@
                     <img src="assets/img/logo/dsocial.png" alt="dsocial">
                 </div>
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Here Is Your Voice Back.</h1>
-                <p class="description" style="color: #b5b3b3;">dSocial is the world's first truly decentralized and censorship-resistant social network, where users own their data and earn for the data they curate. Reserve your username now and join the people's network.</p>
-                <div class="text-center"><a href="https://signup.dsocial.network/welcome" class="btn btn-lg btn-white">Join The Social Revolution</a></div>
+                <p class="description" style="color: #fff;">dSocial is the world's first truly decentralized and censorship-resistant social network, where users own their data and earn for the data they curate. Reserve your username now and get your voice back.</p>
+                <div class="text-center">
+                  <a href="https://signup.dsocial.network/welcome" class="btn btn-lg btn-white">Join The Social Revolution</a>
+                  <a href="https://github.com/peepsx/dsocial-whitepaper" class="btn btn-lg btn-white">Read Whitepaper</a>
+                </div>
                 <a href="#censorship-resistant"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
       </div>
     </div>
-    <p class="replace">Photograph Of Old Faithful</p>
+    <p class="replace label">Photograph Of Old Faithful</p>
   </section>
 
 <!------------------------- CTA Block End------------------------>
@@ -278,7 +281,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">plus, you earn some money.</h1>
-                <p class="description">Friends upvote each other's posts and comments with various cryptocurrencies like RIX and LIKE so that users of the network earn for their interactions with the network.</p>
+                <p class="description">Friends upvote each other's posts and comments with various cryptocurrencies like RIX and LIKE so that users can earn for their interactions with the network.</p>
                 <a href="#countdown"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
@@ -309,7 +312,7 @@
     <div class="row align-items-center justify-content-around">
       <div class="col-lg-5 col-md-6">
         <span class="h2 d-block">Help us bring freedom back to the web.</span>
-        <p class="lead mb-4">Learn how you can help support our continued development of the dWeb and the many apps we're developing to enable our team to bring freedom back to the web.</p>
+        <p class="lead mb-4">We need your help in funding our continued development of the dWeb and powerful projects like dWallet and dSocial, so that we can ultimately bring freedom back to the web, together.</p>
         <div class="list-group">
           <a href="join.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
@@ -350,7 +353,7 @@
             <img src="assets/img/logo/peepsLogo.png" alt="peeps-logo" class="footer-logo">
             <p class="trademark">decentralize everything. &trade;</p>
             <hr/>
-            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/>- Jared Rice Sr.<br/>CEO, Peeps</p>
+            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/><b>- Jared Rice Sr.</b><br/>CEO, Peeps</p>
             <hr/>
             <p class="powered-by">
               Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png" alt="peeps-logo"></a> and Made in <img src="assets/img/flag-us.svg" alt="United States" class="btn-image">
