--- a/fund.html
+++ b/fund.html
@@ -8,7 +8,7 @@
     <meta name="description" content="People from around the world support our mission to bring freedom back to the Internet and for the price of a cup of coffee, you can too.">
     <meta name="keywords" content="">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    <link rel="shortcut icon" href="assets/img/logo/peepfab.png">
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
@@ -110,7 +110,7 @@
                     <img src="assets/img/logo/dwallet.png" alt="dwallet">
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">dWalle</span>
+                    <span class="h6 d-block mb-0">dWallet</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -176,7 +176,7 @@
               </a>
               <a href="https://docs.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>DD</span>
                   </div>
                   <div>
@@ -187,11 +187,11 @@
               </a>
               <a href="https://explorer.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>EN</span>
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">Explore Network Data </span>
+                    <span class="h6 d-block mb-0">Explore Network</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -213,13 +213,11 @@
     </div>
   </div>
 </nav>
-    
-   
 
 <!--------------------------------- Header Block End --------------------------->
 <!-------------------------dSocial CTA Block Start------------------------>
-<section class="height-100 bg-opaque">
-    <img src="assets/img/Medicine Bow.jpg" alt="Medicine Bow-Routt National Forest" class="bg-image">
+<section class="height-100 bg-gradient">
+    <img src="assets/img/Medicine Bow.jpg" alt="Medicine Bow-Routt National Forest" class="bg-image opacity-30">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
@@ -228,7 +226,7 @@
                     <img src="assets/img/logo/dsocial.png" alt="dsocial">
                 </div> -->
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">free speech matters.</h1>
-                <p class="description" style="color: #fff;">There are many ways to fund our mission to bring much needed change to the worldwide web, whether it's by joining the "Patriots Club" or simply donating to our efforts. It's patriots like yourself that continue to keep this decentralized dream of ours alive and we need your help in order to reach our goal of raising $100,000.</p>
+                <p class="description" style="color: #fff;">There are many ways to help fund our mission to bring much needed change to the worldwide web, whether it's by joining the "Patriots Club" or simply donating to our efforts. It's patriots like yourself that continue to keep this decentralized dream of ours alive and we need your help in order to reach our goal of raising $100,000.</p>
                 <div class="text-center">
                     <a href="join.html" class="btn btn-lg btn-white">Join The Patriot Club</a>
                     <a href="donate.html" class="btn btn-lg btn-white">Donate To Development</a>
@@ -238,7 +236,7 @@
         </div>
       </div>
     </div>
-    <p class="replace">Photograph of: Medicine Bow-Routt National Forest</p>
+    <p class="replace label">Photograph of: Medicine Bow-Routt National Forest</p>
   </section>
 
 <!------------------------- CTA Block End------------------------>
@@ -252,11 +250,12 @@
                 <div class="progress">
                   <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
                     <div class="d-flex justify-content-between">
-                      <span>Graphics</span>
+                      <!-- <span>Put text to displayed in the progerss bar</span> -->
                       <span>25%</span>
                     </div>
                   </div>
                 </div>
+                <h2>We have raised "total-amount-raised" of our $100,000 goal.</h2>
                 <a href="#become-a-member"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
@@ -272,7 +271,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">become a member.</h1>
-                <p class="description">Signing up to become a member places you in our Patriots Club, and will give you an inside look into all of the projects that we're developing at PeepsLabs. For just $3/month, you can support our work and get daily updates straight from our development team.</p>
+                <p class="description">Signing up to become a member places you in our Patriots Club and will give you an inside look into all of the projects that we're developing at PeepsLabs. For just $3 per month, you can support our work and get daily updates straight from our development team.</p>
                 <div class="text-center">
                     <a href="join.html" class="btn btn-lg btn-white">Become A Member</a>
                 </div>
@@ -312,7 +311,7 @@
             <img src="assets/img/logo/peepsLogo.png" alt="peeps-logo" class="footer-logo">
             <p class="trademark">decentralize everything. &trade;</p>
             <hr/>
-            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/>- Jared Rice Sr.<br/>CEO, Peeps</p>
+            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/><b>- Jared Rice Sr.</b><br/>CEO, Peeps</p>
             <hr/>
             <p class="powered-by">
               Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png" alt="peeps-logo"></a> and Made in <img src="assets/img/flag-us.svg" alt="United States" class="btn-image">
