--- a/join.html
+++ b/join.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Signup to join our Patriots Club and help support our movement to bring freedom back to the Internet.">
     <meta name="keywords" content="dweb search engine, search dweb, search dapps, search dsites">
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/img/logo/peepsLogo.png">
+    <link rel="shortcut icon" href="assets/img/logo/peepfab.png">
     
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,400i,600,600i,700,700i%7cPermanent+Marker" rel="stylesheet">
@@ -117,7 +117,7 @@
                     <img src="assets/img/logo/dwallet.png" alt="dwallet">
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">dWalle</span>
+                    <span class="h6 d-block mb-0">dWallet</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -183,7 +183,7 @@
               </a>
               <a href="https://docs.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>DD</span>
                   </div>
                   <div>
@@ -194,11 +194,11 @@
               </a>
               <a href="https://explorer.arisen.network " class="list-group-item list-group-item-action d-flex justify-content-between align-items-center py-3">
                 <div class="d-flex align-items-center">
-                  <div class="icon-rounded bg-gradient-3 mr-3">
+                  <div class="icon-rounded mr-3" style="border: 1px solid #000;">
                     <span>EN</span>
                   </div>
                   <div>
-                    <span class="h6 d-block mb-0">Explore Network Data </span>
+                    <span class="h6 d-block mb-0">Explore Network</span>
                   </div>
                 </div>
                 <i class="material-icons">keyboard_arrow_right</i>
@@ -254,7 +254,7 @@
                         </div>
                         <div class="col-sm-6">
                              <div class="form-group">
-                                    <input name="name" type="text" class="form-control" id="addresstwo"  placeholder="Address2*">
+                                    <input name="name" type="text" class="form-control" id="addresstwo"  placeholder="Address2">
                             </div>
                         </div>
                     </div>
@@ -269,16 +269,16 @@
                                     <input name="name" type="text" class="form-control" id="state"  placeholder="State*">
                             </div>
                         </div>
-                        <div class="col-sm-3">
+                        <div class="col-sm-6">
                                 <div class="form-group">
                                     <input name="name" type="number" class="form-control" id="zipcode"  placeholder="Zip Code*">
                                 </div>
                         </div>
-                        <div class="col-sm-3">
+                        <!-- <div class="col-sm-3">
                                 <div class="form-group">
                                     <input name="name" type="text" class="form-control" id="country"  placeholder="Country*">
                                 </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
@@ -366,7 +366,7 @@
             <img src="assets/img/logo/peepsLogo.png" alt="peeps-logo" class="footer-logo">
             <p class="trademark">decentralize everything. &trade;</p>
             <hr/>
-            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/>- Jared Rice Sr.<br/>CEO, Peeps</p>
+            <p>"They can take my personal belongings, my reputation, and even my kids, but they'll never take my vision."<br/><b>- Jared Rice Sr.</b><br/>CEO, Peeps</p>
             <hr/>
             <p class="powered-by">
               Powered by <a href="https://peepsx.com" target="_blank"><img src="assets/img/logo/arisen.png" alt="peeps-logo"></a> and Made in <img src="assets/img/flag-us.svg" alt="United States" class="btn-image">
