--- a/fund.html
+++ b/fund.html
@@ -225,8 +225,8 @@
                 <!-- <div class="logo-rounded ">
                     <img src="assets/img/logo/dsocial.png" alt="dsocial">
                 </div> -->
-                <h1 class="display-4 text-white font-alt-1 text-center mt-2">free speech matters.</h1>
-                <p class="description" style="color: #fff;">There are many ways to help fund our mission to bring much needed change to the worldwide web, whether it's by joining the "Patriots Club" or simply donating to our efforts. It's patriots like yourself that continue to keep this decentralized dream of ours alive and we need your help in order to reach our goal of raising $100,000.</p>
+                <h1 class="display-4 text-white font-alt-1 text-center mt-2">A Better Web Awaits.</h1>
+                <p class="description" style="color: #fff;">We're working extremely hard at Peeps to build a better web for everyone, although it's only possible when we receive support from people like yourself. Join our Patriots Club or donate a few dollars to enable us to continue our fight to preserve your online freedom.</p>
                 <div class="text-center">
                     <a href="join.html" class="btn btn-lg btn-white">Join The Patriot Club</a>
                     <a href="donate.html" class="btn btn-lg btn-white">Donate To Development</a>
@@ -247,7 +247,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">our support is growing.</h1>
-                <div class="progress">
+                <div class="progress" style="height: 50px;">
                   <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
                     <div class="d-flex justify-content-between">
                       <!-- <span>Put text to displayed in the progerss bar</span> -->
@@ -289,8 +289,8 @@
       <div class="row justify-content-center">
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
-                <h1 class="display-4">or donate.</h1>
-                <p class="description">You can also make a one-time or monthly donation amount easily through our donation portal.</p>
+                <h1 class="display-4">or simply donate.</h1>
+                <p class="description">While donations are not yet tax-deductible (we're working on it), they allow us to continue our development of technologies and apps like dSocial that preserve your freedom of speech on the Internet, as well as various other freedoms that are under constant attack by tech companies from around the world. Simply put, without people like you, our fight isn't possible.</p>
                 <div class="text-center">
                     <a href="donate.html" class="btn btn-lg btn-white">Donate Now</a>
                 </div>
