--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="logo-rounded ">
               <img src="assets/img/logo/dweb-logo.png" alt="dweb">
             </div>
-            <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">The People's Web</h1>
+            <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">The People's Web.</h1>
               <p class="description">The decentralized web is an all-new web where end-users are in control of their own data, the community polices the websites, apps and content distributed on top of it, hackers are rendered useless and where users and developers of the Internet can finally have their freedom back - by design.</p>
               <a href="https://dwebx.org" class="btn btn-lg btn-black" style="color:#fff">Learn More About dWeb</a>
               <a href="#dbrowser"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
@@ -337,7 +337,7 @@
               <img src="assets/img/logo/dsocial.png" alt="dsocial">
             </div>
             <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">Here Is Your Voice Back.</h1>
-              <p class="description">dSocial is the world's first truly decentralized and censorship-resistant social network, where users own their own data and earn for the data they curate.</p>
+              <p class="description">dSocial is the world's first truly decentralized and censorship-resistant social network, where users own their data and earn for the data they curate.</p>
               <a href="dsocial.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About dSocial</a>
               <a href="#support"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
             </div>
@@ -352,7 +352,7 @@
     <div class="row align-items-center justify-content-around">
       <div class="col-lg-5 col-md-6">
         <span class="h2 d-block">Help us bring freedom back to the web.</span>
-        <p class="lead mb-4">We need your help in funding our continued development of the dWeb and powerful projects like dWallet and dSocial, so that we can ultimately bring freedom back to the web, together.</p>
+        <p class="lead mb-4">It's people like you that empowers us to develop technologies that preserve all of our freedoms on the Internet.</p>
         <div class="list-group">
           <a href="join.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
