--- a/dbrowser.html
+++ b/dbrowser.html
@@ -278,7 +278,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">develop on the dweb.</h1>
-                <p class="description">dBrowser is packed full with developer tools that allow developers to easily develop and launch projects on the dWeb, including a built-in web editor, a distributed software repository and even pre-designed web templates.</p>
+                <p class="description">dBrowser is packed full of developer tools that allow developers to easily develop and launch projects on the dWeb, including a built-in web editor, a distributed software repository and even pre-designed web templates.</p>
                 <a href="#true-privacy"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
@@ -293,7 +293,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
-                <h1 class="display-4">and do so privately.</h1>
+                <h1 class="display-4">and do it privately.</h1>
                 <p class="description">dBrowser does not have any hidden trackers or software that gives anyone the ability to invade your privacy in any way, whatsoever. dBrowser's code is also open source and freely available for anyone to inspect for themselves on various online software repositories.</p>
               </div>
         </div>
@@ -308,7 +308,7 @@
     <div class="row align-items-center justify-content-around">
       <div class="col-lg-5 col-md-6">
         <span class="h2 d-block">Help us bring freedom back to the web.</span>
-        <p class="lead mb-4">We need your help in funding our continued development of the dWeb and powerful projects like dWallet and dSocial, so that we can ultimately bring freedom back to the web, together.</p>
+        <p class="lead mb-4">It's people like you that empowers us to develop technologies that preserve all of our freedoms on the Internet.</p>
         <div class="list-group">
           <a href="join.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
