--- a/dnames.html
+++ b/dnames.html
@@ -247,7 +247,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
-                <h1 class="display-4">search for your next domain name.</h1>
+                <h1 class="display-4">search for your next domain.</h1>
                 <!-- <div class="message-box" style="color: green;">
                     <p>The dTLD is available! or not message box</p>
                 </div> -->
@@ -318,7 +318,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
-                <h1 class="display-4">easily manage your domains too.</h1>
+                <h1 class="display-4">easily manage them too.</h1>
                 <p class="description">dNames allows your to manage the dDNS records for your domains via dBrowser, MacOS, Windows and Linux, free of charge. It doesn't get any easier or better than that.</p>
                 
               </div>
@@ -334,7 +334,7 @@
     <div class="row align-items-center justify-content-around">
       <div class="col-lg-5 col-md-6">
         <span class="h2 d-block">Help us bring freedom back to the web.</span>
-        <p class="lead mb-4">We need your help in funding our continued development of the dWeb and powerful projects like dWallet and dSocial, so that we can ultimately bring freedom back to the web, together.</p>
+        <p class="lead mb-4">It's people like you that empowers us to develop technologies that preserve all of our freedoms on the Internet.</p>
         <div class="list-group">
           <a href="join.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
