--- a/dsearch.html
+++ b/dsearch.html
@@ -279,7 +279,7 @@
         <div class="col-xl-8 col-lg-8 col-md-8 center-text">
             <div class="">
                 <h1 class="display-4">a new kind of search engine.</h1>
-                <p class="description">dSearch uses a game-changing technology stack that allows dSearch to perform greater than search engines like Google, without a single data center or even a server. dSearch instead operates across the computers that use it, further increasing the privacy of its users.</p>
+                <p class="description">dSearch uses a game-changing technology stack that allows dSearch to perform at a higher level than search engines like Google, without a single data center or even a server. dSearch instead operates across the computers that use it, further increasing the privacy of its users.</p>
                 <a href="#search-and-earn"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
         </div>
@@ -310,7 +310,7 @@
     <div class="row align-items-center justify-content-around">
       <div class="col-lg-5 col-md-6">
         <span class="h2 d-block">Help us bring freedom back to the web.</span>
-        <p class="lead mb-4">We need your help in funding our continued development of the dWeb and powerful projects like dWallet and dSocial, so that we can ultimately bring freedom back to the web, together.</p>
+        <p class="lead mb-4">It's people like you that empowers us to develop technologies that preserve all of our freedoms on the Internet.</p>
         <div class="list-group">
           <a href="join.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
