--- a/dwallet.html
+++ b/dwallet.html
@@ -314,7 +314,7 @@
     <div class="row align-items-center justify-content-around">
       <div class="col-lg-5 col-md-6">
         <span class="h2 d-block">Help us bring freedom back to the web.</span>
-        <p class="lead mb-4">We need your help in funding our continued development of the dWeb and powerful projects like dWallet and dSocial, so that we can ultimately bring freedom back to the web, together.</p>
+        <p class="lead mb-4">It's people like you that empowers us to develop technologies that preserve all of our freedoms on the Internet.</p>
         <div class="list-group">
           <a href="join.html" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
             <div class="d-flex align-items-center">
