--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <div class="col-lg-5 mb-3 mb-sm-0">
             <h1 class="display-4">decentralize everything.</h1>
             <p class="description">We're fighting for your right to free speech, privacy and freedom online through the launch of the decentralized web and many new apps like dSocial, dSearch and more. Join our crusade to decentralize everything and take on the big tech cartel.</p>
-            <a href="https://signup.dsocial.network/" class="btn btn-lg btn-black" style="color:#fff">Join dSocial</a>
+            <a href="https://signup.dsocial.network/" class="btn btn-lg btn-black" style="color:rgb(243,236,222)">Join dSocial</a>
             <a href="#block-2" class="btn btn-lg btn-success">Learn More</a>
           </div>
           <div class="col-lg-7">
@@ -255,7 +255,7 @@
             </div>
             <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">The People's Web.</h1>
               <p class="description">The decentralized web is an all-new web where end-users are in control of their own data, the community polices the websites, apps and content distributed on top of it, hackers are rendered useless and where users and developers of the Internet can finally have their freedom back - by design.</p>
-              <a href="https://dwebx.org" class="btn btn-lg btn-black" style="color:#fff">Learn More About dWeb</a>
+              <a href="https://dwebx.org" class="btn btn-lg btn-black" style="color:rgb(243,236,222)">Learn More About dWeb</a>
               <a href="#dbrowser"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               
             </div>
@@ -276,7 +276,7 @@
             </div>
             <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">Experience The Open Web.</h1>
               <p class="description">dBrowser allows users to browse the dWeb and develop decentralized websites and applications as well. dBrowser is available for MacOS, Windows and Linux, where you can experience the decentralized and open web for yourself.</p>
-              <a href="dbrowser.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About dBrowser</a>
+              <a href="dbrowser.html" class="btn btn-lg btn-black" style="color:rgb(243,236,222)">Learn More About dBrowser</a>
               <a href="#peepsid"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
             </div>
       </div>
@@ -297,7 +297,7 @@
             </div>
             <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">One Identity. A World Of Possibilities.</h1>
               <p class="description">The dWeb and its apps use a universal and decentralized authentication system. One account allows you to use any dWeb-powered app, it is cryptographically secure and impossible to hack.</p>
-              <a href="peepsid.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About PeepsID</a>
+              <a href="peepsid.html" class="btn btn-lg btn-black" style="color:rgb(243,236,222)">Learn More About PeepsID</a>
               <a href="#dwallet"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
             </div>
       </div>
@@ -318,7 +318,7 @@
             </div>
             <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">Better Than A Bank.</h1>
               <p class="description">dWallet allows users to manage their PeepsID as well as all the crypto they've earned using various apps on the dWeb, like dSocial. dWallet is available for MacOS, Windows, Linux and Android.</p>
-              <a href="dwallet.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About dWallet</a>
+              <a href="dwallet.html" class="btn btn-lg btn-black" style="color:rgb(243,236,222)">Learn More About dWallet</a>
               <a href="#dsocial"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
             </div>
       </div>
@@ -338,7 +338,7 @@
             </div>
             <h1 class="display-4 text-white font-alt-1 text-center mt-2" style="color:rgb(0,0,0) !important">Here Is Your Voice Back.</h1>
               <p class="description">dSocial is the world's first truly decentralized and censorship-resistant social network, where users own their data and earn for the data they curate.</p>
-              <a href="dsocial.html" class="btn btn-lg btn-black" style="color:#fff">Learn More About dSocial</a>
+              <a href="dsocial.html" class="btn btn-lg btn-black" style="color:rgb(243,236,222)">Learn More About dSocial</a>
               <a href="#support"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
             </div>
       </div>
