--- a/dwallet.html
+++ b/dwallet.html
@@ -230,7 +230,7 @@
                 <h1 class="display-4 text-white font-alt-1 text-center mt-2">Better Than A Bank.</h1>
                 <p class="description" style="color: #fff;">dWallet allows users to manage and spend their cryptocurrency earnings across the entire Peeps ecosystem of decentralized applications.</p>
                 <div class="text-center">
-                  <div class="text-center"><a href="https://github.com/dbrowser/dbrowser/releases" class="btn btn-lg btn-white" id='os_download' target="_blank">Download for OS</a></div>
+                  <div class="text-center"><a href="https://github.com/ArisenIO/dWallet-desktop/releases" class="btn btn-lg btn-white" id='os_download' target="_blank">Download for OS</a></div>
                 </div>
                 <a href="#manage-earnings"><i class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
               </div>
@@ -472,11 +472,11 @@
         
         let txt = document.getElementById('os_download');
             if(txt.innerHTML.indexOf('Linux') !== -1) {
-                txt.href = 'https://github.com/dBrowser/dbrowser/releases/download/1.7.5/dbrowser-1.7.5-x86_64.AppImage'
+                txt.href = 'https://github.com/ArisenIO/dWallet-desktop/releases/download/1.1.3/linux-dWallet-1.1.3-x86_64.AppImage'
             } else if(txt.innerHTML.indexOf('Mac') !== -1) {
-                txt.href = 'https://github.com/dBrowser/dbrowser/releases/download/1.7.5/dbrowser-1.7.5.dmg'
+                txt.href = 'https://github.com/ArisenIO/dWallet-desktop/releases/download/1.1.3/dWallet.app.zip'
             } else  if(txt.innerHTML.indexOf('Win') !== -1) {
-                txt.href = 'https://github.com/dBrowser/dbrowser/releases/download/1.7.5/dbrowser-setup-1.7.5.exe'
+                txt.href = 'https://github.com/ArisenIO/dWallet-desktop/releases/download/1.1.3/win-dWallet-1.1.3.exe'
             }
             else{
                 txt.href = "#"
