--- a/fund.html
+++ b/fund.html
@@ -6,8 +6,7 @@
   <title>Support Our Development | Peeps - decentralize everything.</title>
   <meta name="title" content="Support Our Development | Peeps - decentralize everything.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content="People from around the world support our mission to bring freedom back to the Internet and for the price of a cup of coffee, you can too.">
+  <meta name="description" content="People from around the world support our mission to bring freedom back to the Internet and for the price of a cup of coffee, you can too.">
   <meta name="keywords" content="">
   <!-- Favicon -->
   <link rel="shortcut icon" href="assets/img/logo/peepfab.png">
@@ -235,31 +234,55 @@
   </nav>
 
   <!--------------------------------- Header Block End --------------------------->
-  <!-------------------------dSocial CTA Block Start------------------------>
-  <section class="height-100 bg-gradient">
-    <img src="assets/img/Medicine Bow.jpg" alt="Medicine Bow-Routt National Forest" class="bg-image opacity-30">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-xl-8 col-lg-8 col-md-8 center-text">
-          <div class="">
-            <!-- <div class="logo-rounded ">
-                    <img src="assets/img/logo/dsocial.png" alt="dsocial">
-                </div> -->
-            <h1 class="display-4 text-white font-alt-1 text-center mt-2">A Better Web Awaits.</h1>
-            <p class="description" style="color: #fff;">We're working extremely hard at Peeps to build a better web for
-              everyone, although it's only possible when we receive support from people like yourself. Join our Patriots
-              Club or donate a few dollars to enable us to continue our fight to preserve your online freedom.</p>
-            <div class="text-center">
-              <a href="join.html" class="btn btn-lg btn-white">Join The Patriot Club</a>
-              <a href="donate.html" class="btn btn-lg btn-white">Donate To Development</a>
-            </div>
-            <a href="#support-is-growing"><i
-                class="material-icons d-block down-arrow arrow bounce">keyboard_arrow_down</i></a>
+  <!-------------------------CTA Block Start------------------------>
+  <section class="controls-inside p-0 controls-light bg-dark" >
+    <div class="height-70 carousel-cell py-3 py-md-4 height-40 overlay-dark">
+      <img class="bg-image opacity-50" src="assets/img/The Grand Canyon.jpg" alt="The Grand Canyon">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-md-6">
+            <h1 class="display-4 text-white">The fight is on for our online freedom.</h1>
+            <p class="lead text-light">At Peeps, our mission to create an Internet that enables freedom depends on the many patriots who contribute to our development efforts. Without people like you, Peeps simply wouldn't be possible.</p>
+            <a href="#support-is-growing" class="btn btn-primary btn-lg">Learn More</a>
           </div>
         </div>
       </div>
+
     </div>
-    <p class="replace label">Photograph of: Medicine Bow-Routt National Forest</p>
+  </section>
+  <section class="pt-md-3 bg-dark">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 d-lg-flex">
+          <div class="card shadow-lg">
+            <div class="card-body py-4">
+              <span class="d-block h1 display-4">32</span>
+              <p>The number of developers, visionaries and advisors on our growing team at Peeps.</p>
+              <a href="our-team.html">Meet our team</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 d-lg-flex">
+          <div class="card shadow-lg">
+            <div class="card-body py-4">
+              <span class="d-block h1 display-4">$100,000+</span>
+              <p>The amount of money sent from contributors in the form of donations, domain payments, developer payments and more.</p>
+              <a href="donate.html">Donate now</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 d-lg-flex">
+          <div class="card shadow-lg">
+            <div class="card-body py-4">
+              <span class="d-block h1 display-4">$3/mo.</span>
+              <p>The cost to become a member of our Patriots Club, a monthly supporter and insider to all of the awesome things we're building at Peeps Labs.</p>
+              <a href="join.html">Join the Patriots Club</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </section>
 
   <!------------------------- CTA Block End------------------------>
